# tinyllamas-ncnn

./: .gitignore  CMakeLists.txt  README.md  bin2pt.py  export_meta_llama_bin.py  model.py  sample.py  tinyllamas.cpp
